@@ -77,10 +77,10 @@ Smarty 3 - Unit Tests Report
  ...
 
  CompileForeachTests
- .......
+ ..............
 
  CompileForTests
- ..............
+ .......
 
  CompileFunctionPluginTests
  ...
@@ -187,7 +187,7 @@ Smarty 3 - Unit Tests Report
  XmlTests
  ...
 
-Time: 5 seconds
+Time: 4 seconds
 
 There was 1 failure:
 
