@@ -89,33 +89,33 @@ td {
 <h2>included templates &amp; config files (load time in seconds)</h2>
 
 <div>
-{for $template in $template_data}
+{foreach $template in $template_data}
   <font color=brown>{$template.name}</font>
   <span class="exectime">
    (compile {$template['compile_time']|string_format:"%.5f"}) (render {$template['render_time']|string_format:"%.5f"}) (cache {$template['cache_time']|string_format:"%.5f"})
   </span>
   <br>
-{/for}
+{/foreach}
 </div>
 
 <h2>assigned template variables</h2>
 
 <table id="table_assigned_vars">
-    {for $vars in $assigned_vars}
+    {foreach $vars in $assigned_vars}
        <tr class="{if $vars@iteration % 2 eq 0}odd{else}even{/if}">   
        <th>${$vars@key|escape:'html'}</th>
        <td>{$vars|debug_print_var}</td></tr>
-    {/for}
+    {/foreach}
 </table>
 
 <h2>assigned config file variables (outer template scope)</h2>
 
 <table id="table_config_vars">
-    {for $vars in $config_vars}
+    {foreach $vars in $config_vars}
        <tr class="{if $vars@iteration % 2 eq 0}odd{else}even{/if}">   
        <th>{$vars@key|escape:'html'}</th>
        <td>{$vars|debug_print_var}</td></tr>
-    {/for}
+    {/foreach}
 
 </table>
 </body>
